[package]
name = "finchers-template"
version = "0.1.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[features]
default = ["tera"]
strict = []

[dependencies]
finchers = "0.12.0-alpha.8"

failure = "0.1.2"
futures = "0.1.24"
http = "0.1.13"
mime = "0.3.9"
mime_guess = "2.0.0-alpha.6"
serde = "1.0.79"

handlebars = { version = "1", optional = true }
tera = { version = "0.11", optional = true }

[dev-dependencies]
log = "0.4.5"
pretty_env_logger = "0.2.4"

[patch.crates-io.finchers]
git = "https://github.com/finchers-rs/finchers.git"
