[package]
name = "finchers-template"
version = "0.1.0" # remember to update html_root_url in lib.rs
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = """
Template engine support for Finchers.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/finchers-rs/finchers-template.git"

include = [
  "Cargo.toml",
  "build.rs",
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
  "benches/**/*",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[workspace]
members = [
  "crates/example-askama",
]

[package.metadata.docs.rs]
features = [
  "tera",
  "handlebars",
  "askama",
  "horrorshow",
]
# FIXME: remove it as soon as the rustc version used in docs.rs is updated
rustdoc-args = ["--cfg", "finchers_inject_extern_prelude"]

[features]
default = ["tera"]

[dependencies]
finchers = "0.12"

failure = "0.1.2"
futures = "0.1.24"
http = "0.1.13"
mime = "0.3.9"
mime_guess = "2.0.0-alpha.6"
serde = "1.0.79"

askama = { version = "0.7", optional = true }
handlebars = { version = "1", optional = true }
horrorshow = { version = "0.6", optional = true }
tera = { version = "0.11", optional = true }

[dev-dependencies]
log = "0.4.5"
pretty_env_logger = "0.2.4"
