[package]
name = "example-handlebars"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_handlebars"
path = "main.rs"
doc = false

[dependencies]
finchers = "0.13"
finchers-template = { path = "../..", features = ["handlebars"], default-features = false }
pretty_env_logger = "0.2.4"
log = "0.4.5"
serde = "1"
handlebars = "1"