[package]
name = "example-horrorshow"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_horrorshow"
path = "src/main.rs"
doc = false

[dependencies]
finchers = "0.13"
finchers-template = { path = "../..", features = ["use-horrorshow"] }
horrorshow = "0.6"
pretty_env_logger = "0.2.4"
log = "0.4.5"
